2862 - Update test